cluster/apps/database/pgadmin/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`pgadmin.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: pgadmin-pgadmin4
          port: 80
  tls:
    secretName: ${SECRET_CERT}
